--- a/_config.yml
+++ b/_config.yml
@@ -100,9 +100,9 @@ analytics:
 
 # Site Author
 author:
-  name             : "Marc Gillmann"
+  name             : "Marc"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "HoU ETD Clearing AD FFM"
+  bio              : "Living with C7 since years"
   location         : "Eschborn EB.08.301"
   email            : "marc.gillmann@deutsche-boerse.com"
   uri              :
