--- a/_config.yml
+++ b/_config.yml
@@ -20,8 +20,8 @@ title                    : "C7 Core"
 title_separator          : "-"
 name                     : "Your Name"
 description              : "Home of C7 Core."
-url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-baseurl                  : # the subpath of your site, e.g. "/blog"
+url                      : "https://gillmar.github.io"
+baseurl                  : "/minimal-mistakes"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 # breadcrumbs            : false # true, false (default)
