--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,9 +1,7 @@
 # main links
 main:
-  #- title: "Quick-Start Guide"
-  #  url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
-  #- title: "About"
-  #  url: https://mmistakes.github.io/minimal-mistakes/about/
+  - title: "About"
+    url: /about/
   - title: "Posts"
     url: /year-archive/
   - title: "Categories"
@@ -13,5 +11,6 @@ main:
   - title: "Pages"
     url: /page-archive/
   - title: "Collections"
-    url: /collection-archive/  - title: "Sitemap"
+    url: /collection-archive/  
+  - title: "Sitemap"
     url: /sitemap/
