--- a/_config.yml
+++ b/_config.yml
@@ -256,7 +256,7 @@ compress_html:
     envs: development
 
 collections:
-- onCallSupport
+- my_collection
 
 # Defaults
 defaults:
@@ -287,6 +287,6 @@ defaults:
   # _Collections
   - scope:
       path: ""
-      type: onCallSupport
+      type: my_collection
     values:
       layout: page
